# reloaded-templates-rust

./: .gitignore  .gitmodules  AGENTS.md  README.MD  cargo-generate.toml  mkdocs.yml  reloaded-templates-rust.sln
.github/: dependabot.yml
.github/example-workflows/: test-and-upload-coverage.yml  test-on-wine.yml
.github/tests/: README.md  requirements.txt  run_tests.py  test_template.py
.github/workflows/: deploy-mkdocs.yml  test-templates.yml
docs/: AGENTS-DOCS.md  index.md  manual.md  requirements.txt
docs/assets/: benchmark-cli.avif  benchmark-report.avif  benchmark-violin-plot.avif  bug-report-template.avif  c-bindings-releases.avif  clippy-lints.avif  coverage-codecov.avif  coverage-gutters.avif  coverage-pills.avif  coverage-report.avif  example-create.avif  flamegraph.avif  issue-template.avif  pgo-cargo-pgo-info.avif  pgo-cargo-pgo-result.avif  pr-checks.avif  profiling-linux-hotspot.avif  profiling-linux-perf.avif  profiling-windows-visualstudio.avif  profiling-windows-vs-tutorial-1.avif  profiling-windows-vs-tutorial-2.avif  profiling-windows-vs-tutorial-3.avif  profiling-windows-vs-tutorial-4.avif  profiling-windows-vs-tutorial-5.avif  reloaded-logo.avif  reloaded-tasks.avif  run-coverage-task.avif  run-task.avif  vscode-debug.avif
docs/features/: automated-testing-publishing.md  ci-workflows.md  cross-compilation.md  fuzzing.md  github-templates.md  license-options.md  miri-testing.md  (+3 more)
scripts/: build-macos-x64.ps1  test-linux-x64.ps1  test-linux-x86.ps1  test-wine-x64.ps1  test-wine-x86.ps1
templates/general/src/cli/: Cargo.toml  README.MD
(+28 files in other folders)
